@@ -1,73 +1,94 @@
 package com.snetwork.dwend.config.files;
 
-
 import com.snetwork.dwend.util.ColorUtils;
-import org.bukkit.ChatColor;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import org.bukkit.plugin.Plugin;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class MessagesConfig extends AbstractConfiguration {
 
-    public MessagesConfig() {
-        super("/", "messages.yml", true);
+    public MessagesConfig(Plugin plugin) {
+        super(plugin, "/", "messages.yml", true);
     }
 
-    public String getColorizedMessageString(String message) {
-        return MessagesUtils.colorize(message);
-    }
-
-    public List<String> getColorizedMessagesListString(List<String> messages) {
-        return MessagesUtils.colorizeList(messages);
-    }
-
-    private String replacePlaceholderString(String message, Map<String, Object> placeholderReplacement) {
-        String result = message;
-        for (Map.Entry<String, Object> entry : placeholderReplacement.entrySet()) {
-            String replace = entry.getKey();
-            Object replacement = entry.getValue();
-            result = result.replaceAll(replace, String.valueOf(replacement));
-        }
-        return result;
-    }
-
-    public String replaceColorizedPlaceholderString(String message, Map<String, Object> placeholderReplacement) {
-        return MessagesUtils.colorize(replacePlaceholderString(message, placeholderReplacement));
-    }
-
-    public List<String> replaceColorizedPlaceholderListString(List<String> messages, Map<String, Object>
-            placeholderReplacement) {
-        List<String> result = new ArrayList<>();
-        for (String msg : messages) {
-            result.add(MessagesUtils.colorize(replacePlaceholderString(msg, placeholderReplacement)));
-        }
-        return result;
-    }
-
-
-    public List<String> replacePlaceholderListString(List<String> messages, Map<String, Object> placeholderReplacement) {
-        List<String> result = new ArrayList<>();
-        for (String msg : messages) {
-            result.add(replacePlaceholderString(msg, placeholderReplacement));
-        }
-        return result;
+    public List<String> getMessagesColorizedList(Message message) {
+        return getMessagesList(message).stream()
+                .map(ColorUtils::colorize)
+                .collect(Collectors.toList());
     }
 
     public String getMessage(Message message) {
-        return getYamlConfiguration().getString(message.getPath());
+        return getYamlConfiguration().getString(message.getPath(), "");
     }
 
     public String getColorizedMessage(Message message) {
-        return MessagesUtils.colorize(getMessage(message));
+        return ColorUtils.colorize(getMessage(message));
     }
 
     public List<String> getMessagesList(Message message) {
-        return message.isList() ? getYamlConfiguration().getStringList(message.getPath()) :
-                new ArrayList<>(List.of(getMessage(message)));
+        if (!message.isList()) {
+            return Collections.singletonList(getMessage(message));
+        }
+        return getYamlConfiguration().getStringList(message.getPath());
     }
 
+    public String replaceColorizedPlaceholder(Message message, Map<String, Object> placeholderReplacement) {
+        return ColorUtils.colorize(replacePlaceholder(message, placeholderReplacement));
+    }
+
+    public String replacePlaceholder(Message message, Map<String, Object> placeholderReplacement) {
+        return replacePlaceholder(getMessage(message), placeholderReplacement);
+    }
+
+    private String replacePlaceholder(String message, Map<String, Object> placeholderReplacement) {
+        String result = message;
+        for (Map.Entry<String, Object> entry : placeholderReplacement.entrySet()) {
+            result = result.replace(entry.getKey(), String.valueOf(entry.getValue()));
+        }
+        return result;
+    }
+
+    public List<String> replaceColorizedPlaceholderListString(List<String> messages, Map<String, Object> placeholderReplacement) {
+        List<String> result = new ArrayList<>();
+        for (String msg : messages) {
+            result.add(ColorUtils.colorize(replacePlaceholder(msg, placeholderReplacement)));
+        }
+        return result;
+    }
+
+    public enum Message {
+        NO_PERM("no-perm"),
+        PLACED("placed"),
+        RELOADED("reloaded"),
+        HOLOGRAM_CLOSED("hologram-closed", true),
+        HOLOGRAM_OPENED("hologram-opened", true),
+        BLOCKED_COMMAND("blocklist-commands-message", true),
+        IN_CLOSED_END("player-in-closed-end", true),
+        OPENING_END("opening-end-message", true),
+        CLOSING_END("closing-end-message", true),
+        OPENED_END("opened-end-message", true);
+
+        private final String path;
+        private final boolean list;
+
+        Message(String path) {
+            this.path = path;
+            this.list = false;
+        }
+
+        Message(String path, boolean list) {
+            this.path = path;
+            this.list = list;
+        }
+
+        public String getPath() {
+            return path;
+        }
+
+        public boolean isList() {
+            return list;
+        }
+    }
 
     @Override
     public void reload() {
@@ -77,100 +98,5 @@ public class MessagesConfig extends AbstractConfiguration {
     @Override
     public void save() {
         super.save();
-    }
-
-    public List<String> getMessagesColorizedList(Message message) {
-        return MessagesUtils.colorizeList(getMessagesList(message));
-    }
-
-    private String replacePlaceholder(String message, Map<String, Object> placeholderReplacement) {
-        String result = message;
-        for (Map.Entry<String, Object> entry : placeholderReplacement.entrySet()) {
-            String replace = entry.getKey();
-            Object replacement = entry.getValue();
-            result = result.replaceAll(replace, String.valueOf(replacement));
-        }
-        return result;
-    }
-
-    public String replaceColorizedPlaceholder(Message message, Map<String, Object> placeholderReplacement) {
-        return MessagesUtils.colorize(replacePlaceholder(message, placeholderReplacement));
-    }
-
-    public List<String> replaceListColorizedPlaceholder(Message message, Map<String, Object> placeholderReplacement) {
-        return MessagesUtils.colorizeList(replaceListPlaceholder(message, placeholderReplacement));
-    }
-
-    public String replacePlaceholder(Message message, Map<String, Object> placeholderReplacement) {
-        return replacePlaceholder(getMessage(message), placeholderReplacement);
-    }
-
-    public List<String> replaceListPlaceholder(Message message, Map<String, Object> placeholderReplacement) {
-        List<String> result = new ArrayList<>();
-        for (String msg : getMessagesList(message)) {
-
-            result.add(replacePlaceholder(msg, placeholderReplacement));
-        }
-        return result;
-    }
-
-    public void setMessage(Message message, String newValue) {
-        getYamlConfiguration().set(message.getPath(), newValue);
-    }
-
-
-    public enum Message {
-        NO_PERM("no-perm"),
-        PLACED("placed"),
-        RELOADED("reloaded"),
-        HOLOGRAM_CLOSED("hologram-closed", true),
-        HOLOGRAM_OPENED("hologram-opened", true),
-        BLOCKED_COMMAND("blocklist-commands-message"),
-        IN_CLOSED_END("player-in-closed-end"),
-        OPENING_END("opening-end-message", true),
-        CLOSING_END("closing-end-message", true),
-        OPENED_END("opened-end-message", true);
-
-        private final String path;
-        private final boolean list;
-
-        Message(String path, boolean list) {
-            this.path = path;
-            this.list = list;
-        }
-
-        Message(String path) {
-            this.path = path;
-            this.list = false;
-        }
-
-        public boolean isList() {
-            return list;
-        }
-
-        public String getPath() {
-            return path;
-        }
-    }
-
-    public static class MessagesUtils {
-        /**
-         * @param input текст для окрашивания
-         * @return окрашенный текст
-         */
-        public static String colorize(String input) {
-            if (input == null) return null;
-            return ColorUtils.colorize(input);
-        }
-
-        /**
-         * @param lore список строк для окрашивания
-         * @return список окрашенных строк
-         */
-        public static List<String> colorizeList(List<String> lore) {
-            return lore.stream()
-                    .map(MessagesUtils::colorize)
-                    .collect(Collectors.toList());
-        }
     }
 }
